--- a/bundles/extensions/framework-extension-xml/pom.xml
+++ b/bundles/extensions/framework-extension-xml/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.fragment.xml</artifactId>
-    <version>1.0.0</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Apache Sling System Bundle Extension: XML APIs</name>
@@ -124,10 +124,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.fragment.xml-1.0.0</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.fragment.xml-1.0.0</developerConnection>
-    <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.fragment.xml-1.0.0</url>
-  </scm>
 </project>
