--- a/contrib/jcr/compiler/pom.xml
+++ b/contrib/jcr/compiler/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.jcr.compiler</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.0.4</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling JCR Java Compiler</name>
@@ -39,9 +39,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/jcr/compiler</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/jcr/compiler</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/contrib/jcr/compiler</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.jcr.compiler-2.0.4</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.jcr.compiler-2.0.4</developerConnection>
+        <url>http://svn.apache.org/viewvc/sling/tags/org.apache.sling.jcr.compiler-2.0.4</url>
     </scm>
 
     <build>
