--- a/bundles/jcr/ocm/pom.xml
+++ b/bundles/jcr/ocm/pom.xml
@@ -230,5 +230,10 @@
             <version>1.5.0</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
