--- a/launchpad/testing-war/pom.xml
+++ b/launchpad/testing-war/pom.xml
@@ -200,6 +200,16 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-scr-plugin</artifactId>
+                <configuration>
+                    <supportedProjectTypes>
+                        <supportedProjectType>war</supportedProjectType>
+                    </supportedProjectTypes>
+                </configuration>
+            </plugin>
+            
             <!--
               Include sling-app launcher classes and resources, but no Sling
               bundles (we want to specify our own versions)
