--- a/contrib/extensions/gwt/sample/pom.xml
+++ b/contrib/extensions/gwt/sample/pom.xml
@@ -156,6 +156,10 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
