--- a/contrib/extensions/obr/pom.xml
+++ b/contrib/extensions/obr/pom.xml
@@ -139,6 +139,10 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
