--- a/contrib/jcr/jackrabbit-client/pom.xml
+++ b/contrib/jcr/jackrabbit-client/pom.xml
@@ -115,5 +115,9 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
