--- a/contrib/jcr/prefs/pom.xml
+++ b/contrib/jcr/prefs/pom.xml
@@ -92,5 +92,9 @@
             <groupId>javax.jcr</groupId>
             <artifactId>jcr</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
