--- a/pom.xml
+++ b/pom.xml
@@ -155,5 +155,9 @@
             <version>2.0.4-incubator</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
