--- a/contrib/scripting/scala/config/pom.xml
+++ b/contrib/scripting/scala/config/pom.xml
@@ -113,6 +113,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
         
     </dependencies>
   
