--- a/bundles/servlets/resolver/pom.xml
+++ b/bundles/servlets/resolver/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.5-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
