--- a/maven/maven-launchpad-plugin/pom.xml
+++ b/maven/maven-launchpad-plugin/pom.xml
@@ -160,12 +160,12 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.launchpad.base</artifactId>
-            <version>2.3.1-SNAPSHOT</version>
+            <version>2.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.launchpad.base</artifactId>
-            <version>2.3.1-SNAPSHOT</version>
+            <version>2.4.0</version>
             <classifier>app</classifier>
         </dependency>
         <dependency>
