--- a/installer/core/pom.xml
+++ b/installer/core/pom.xml
@@ -63,7 +63,7 @@
 							org.apache.sling.installer.api;version=3.1.0,
                             org.apache.sling.installer.api.info;version=1.0.0,
                             org.apache.sling.installer.api.event;version=1.0.0,
-                            org.apache.sling.installer.api.tasks;version=1.2.0
+                            org.apache.sling.installer.api.tasks;version=1.3.0
                         </Export-Package>
 						<Private-Package>
 						    org.apache.sling.installer.core.impl.*
@@ -71,7 +71,7 @@
                         <Embed-Dependency>
                             org.apache.felix.configadmin;inline="org/apache/felix/cm/file/ConfigurationHandler.*",
                             org.osgi.compendium;inline="org/osgi/util/tracker/*",
-                            org.apache.sling.commons.osgi;inline="org/apache/sling/commons/osgi/ManifestHeader*.*"
+                            org.apache.sling.commons.osgi;inline="org/apache/sling/commons/osgi/ManifestHeader*.*|org/apache/sling/commons/osgi/PropertiesUtil.*"
                         </Embed-Dependency>
 					</instructions>
 				</configuration>
@@ -143,7 +143,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.osgi</artifactId>
-            <version>2.0.6</version>
+            <version>2.1.0</version>
             <scope>provided</scope>
         </dependency>
       <!-- We use a class from the config admin implementation to read config files -->
