--- a/samples/installing-dependencies/pom.xml
+++ b/samples/installing-dependencies/pom.xml
@@ -11,6 +11,13 @@
     language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <parent>
+        <groupId>org.apache</groupId>
+        <artifactId>apache</artifactId>
+        <version>8</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.sling</groupId>
     <artifactId>installing-dependencies-sample</artifactId>
