--- a/contrib/scripting/jst/pom.xml
+++ b/contrib/scripting/jst/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.scripting.jst</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>2.0.6</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Scripting JST Support</name>
@@ -36,13 +36,13 @@
 
     <scm>
         <connection>
-            scm:svn:http://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/jst
+            scm:svn:http://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.jst-2.0.6
         </connection>
         <developerConnection>
-            scm:svn:https://svn.apache.org/repos/asf/sling/trunk/contrib/scripting/jst
+            scm:svn:https://svn.apache.org/repos/asf/sling/tags/org.apache.sling.scripting.jst-2.0.6
         </developerConnection>
         <url>
-            http://svn.apache.org/viewvc/sling/trunk/contrib/scripting/jst
+            http://svn.apache.org/viewvc/sling/tags/org.apache.sling.scripting.jst-2.0.6
         </url>
     </scm>
 
@@ -59,7 +59,7 @@
                 <configuration>
                     <instructions>
                         <!-- Override default - we don't export anything -->
-                        <Export-Package></Export-Package>
+                        <Export-Package />
                         <!--
                           TODO the xerces and dom dependencies should
                           come from separate bundles
