--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,36 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>testbundles</id>
+                        <phase>process-test-classes</phase>
+                        <configuration>
+                            <target name="build">
+                                <taskdef resource="aQute/bnd/ant/taskdef.properties"
+                                    classpathref="maven.plugin.classpath" />
+                                <bnd classpath="${build.testOutputDirectory}" failok="false"
+                                    exceptions="true" files="src/test/resources/test1.bnd"
+                                    output="${build.testOutputDirectory}" />
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>biz.aQute</groupId>
+                        <artifactId>bnd</artifactId>
+                        <version>0.0.384</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            
+            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
