--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -71,3 +71,9 @@ resource.resolver.manglenamespaces.description = Defines whether namespace \
  containing colons, even though they are perfectly valid characters in the \
  path part of URI references with a scheme. The default value of this property \
  if no configuration is provided is "true".
+
+resource.resolver.required.providers.name = Required Providers
+resource.resolver.required.providers.description = A resource resolver factory is only \
+ available (registered) if all resource providers mentioned in this configuration \
+ are available. Each entry is either a service PID or a filter expression. \
+ Invalid filters are ignored.
