--- a/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/bundles/resourceresolver/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -44,10 +44,10 @@ resource.resolver.virtual.description = List of virtual URLs and there \
  applied on the complete request URL only.
 
 resource.resolver.mapping.name = URL Mappings
-resource.resolver.mapping.description = List of mappings to apply to URLs. \
- Incoming mappings are applied to request URLs to map to Content paths, \
- outgoing mappings are applied to map Content paths to URLs used on subsequent \
- requests. Form ist <externalURLPrefix><op><internalURLPrefix> where <op> is \
+resource.resolver.mapping.description = List of mappings to apply to paths. \
+ Incoming mappings are applied to request paths to map to resource paths, \
+ outgoing mappings are applied to map resource paths to paths used on subsequent \
+ requests. Form is <internalPathPrefix><op><externalPathPrefix> where <op> is \
  ">" for incoming mappings, "<" for outgoing mappings and ":" for mappings \
  applied in both directions. Mappings are applied in configuration order by \
  comparing and replacing URL prefixes. Note: The use of "-" as the <op> value \
